minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp.clang-tidy.loop-label.out.log
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:2269:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:2269:5: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:2283:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:2283:5: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:2297:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:2297:5: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:3931:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:3931:7: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:5946:5: warning: Added loop label VITIS_LOOP_181_1:   [xilinx-label-all-loops]
    for (int i = 0; i < 20; i++)
    ^~~
    VITIS_LOOP_181_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:5946:5: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6061:5: warning: Added loop label VITIS_LOOP_41_1:   [xilinx-label-all-loops]
    for (int dz = 0; dz < 2; dz++)
    ^~~
    VITIS_LOOP_41_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6061:5: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6063:9: warning: Added loop label VITIS_LOOP_43_2:   [xilinx-label-all-loops]
        for (int dy = 0; dy < 2; dy++)
        ^~~
        VITIS_LOOP_43_2: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6063:9: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6065:13: warning: Added loop label VITIS_LOOP_45_3:   [xilinx-label-all-loops]
            for (int dx = 0; dx < 2; dx++)
            ^~~
            VITIS_LOOP_45_3: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6065:13: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6733:54: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=layer_weights type=ram_2p impl=bram
                                                     ^
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6734:53: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=layer_biases type=ram_2p impl=bram
                                                    ^
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6766:5: warning: Added loop label VITIS_LOOP_96_1:   [xilinx-label-all-loops]
    while (!feature_data_stream.empty() && !write_addr_stream.empty()) {
    ^~~~~
    VITIS_LOOP_96_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6766:5: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6772:9: warning: Added loop label VITIS_LOOP_102_2:   [xilinx-label-all-loops]
        for (int c = 0; c < 3; c++) {
        ^~~
        VITIS_LOOP_102_2: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6772:9: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6874:49: error: Invalid Directive: for current device, ram_2p + uram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=z_buffer type=ram_2p impl=uram
                                                ^
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6936:17: warning: Added loop label VITIS_LOOP_288_1:   [xilinx-label-all-loops]
                for (int ic = 0; ic < config.input_channels; ic++) {
                ^~~
                VITIS_LOOP_288_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:6936:17: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:7065:9: warning: Added loop label VITIS_LOOP_417_1:   [xilinx-label-all-loops]
        for (int y = 0; y < 64; y++) {
        ^~~
        VITIS_LOOP_417_1: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:7065:9: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:7066:13: warning: Added loop label VITIS_LOOP_418_2:   [xilinx-label-all-loops]
            for (int x = 0; x < 64; x++) {
            ^~~
            VITIS_LOOP_418_2: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:7066:13: note: FIX-IT applied suggested code changes
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:7077:21: warning: Added loop label VITIS_LOOP_429_3:   [xilinx-label-all-loops]
                    for (int c = 0; c < output_channels; c++) {
                    ^~~
                    VITIS_LOOP_429_3: 
/home/robin/Desktop/ocnn-project/minkowski_net/solution1/.autopilot/db/minkowski_net.pp.0.cpp:7077:21: note: FIX-IT applied suggested code changes
